[package]
name = "neon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.18.0"
simple_logger = "4.0.0"
log = "0.4.17"
url = { version = "2.1.0" }
toml = "0.5.10"
serde = "1.0.152"
serde_derive = "1.0.152"